--- a/en/software.html
+++ b/en/software.html
@@ -6,18 +6,18 @@
 	<!-- Optimize page loading on some devices -->
 	<meta charset="utf-8">
 	<meta content='width=device-width, initial-scale=1' name='viewport'>
-	<meta name="description" content="Programs created by Salonia Matteo.">
+	<meta name="description" content="Programs created by Salonia Matteo">
 
 	<!-- Social media preview -->
 	<meta property="og:title"	content="Salonia Matteo">
 	<meta property="og:url"		content="https://salonia.it/en/software.html">
-	<meta property="og:description"	content="Programs created by Salonia Matteo.">
+	<meta property="og:description"	content="Programs created by Salonia Matteo">
 	<meta property="og:image"	content="https://salonia.it/favicon.png">
 
 	<!-- Twitter-specific -->
 	<meta property="twitter:title"		content="Salonia Matteo">
 	<meta property="twitter:card"		content="summary_large_image">
-	<meta property="twitter:description"	content="Programs created by Salonia Matteo.">
+	<meta property="twitter:description"	content="Programs created by Salonia Matteo">
 	<meta property="twitter:image"		content="https://salonia.it/favicon.png">
 
 	<!--Favicon-->
@@ -86,7 +86,7 @@
 	</article>
 
 	<article>
-		<p>If you are intrested in hiring me to create a Modern website, or maybe an App for PC or Android, click on the button below  to open a page that contains my contact details, to contact, Talk about your project, or to request a quotation.</p>
+		<p>If you are interested in hiring me to create a modern Website, or you&apos;re interested in a PC or Android app, click the button below to open the page that contains my contact details, to contact me, discuss about your project, and request for a quotation.</p>
 
 		<nav class="right-align small-margin">
 			<a class="button round" href="contact.html">Contact Details<i>arrow_forward</i></a>
@@ -100,7 +100,7 @@
 			<div class="max">
 				<h6><a href="https://github.com/saloniamatteo/tp-xfan">TP-XFan (ThinkPad XForms Fan)</a></h6>
 				<p>
-				Program to modify the speed of the fan of any Thinkpad. Presented with a graphical user interface (created with<a class="button round small no-margin" href="http://savannah.nongnu.org/projects/xforms">XForms&nbsp;<i>arrow_forward</i></a>), and with an Automatic Fan Speed Management mode (AFSM).
+				Program to modify the speed of any ThinkPad&apos;s fan. It has a graphical user interface (created with <a class="button round small no-margin" href="http://savannah.nongnu.org/projects/xforms">XForms&nbsp;<i>arrow_forward</i></a>), and the Automatic Fan Speed Management mode (AFSM).
 				</p>
 			</div>
 		</div>
@@ -116,7 +116,7 @@
 			<img class="circle small" src="../pics/csnake.png" alt="Csnake logo">
 			<div class="max">
 				<h6><a href="https://github.com/saloniamatteo/csnake">Csnake</a></h6>
-				<p>A clone of the game "Snake" that uses a terminal a user interface made iwth<a class="button round small no-margin" href="https://invisible-island.net/ncurses/announce.html">ncurses <i>arrow_forward</i></a>. It&apos;s possible to save game scores with a custom name, in any file; Also, you an modify the speed/difficulty, and show the borders of the screen.</p>
+				<p>A Snake clone that has a pseudo-graphical user interface using <a class="button round small no-margin" href="https://invisible-island.net/ncurses/announce.html">ncurses <i>arrow_forward</i></a>. It&apos;s possible to save scores with a custom name, in any file; also, it&apos;s possible to modify the speed/difficulty, and to show the screen borders.</p>
 			</div>
 		</div>
 
@@ -131,7 +131,7 @@
 			<img class="circle small" src="../pics/quiz.png" alt="Quiz logo">
 			<div class="max">
 				<h6><a href="https://github.com/saloniamatteo/quiz">Quiz</a></h6>
-			<p>Program used to create and/or take a Quiz. It doesn&apos;t have a graphical user interface, you need to use it in a terminal, following the text on the screen. It&apos;s possibile save game scores with a custom name, in any file; Also, A quiz is alredy included, and it&apos;s easy to use.</p>
+			<p>Program used to create small Quizzes and/or take a Quiz. It does not have a graphical user interface; you have to use it via the terminal, following the text instructions on the screen. It&apos;s possible to save scores with a custom name, in any file; also, an easy-to-use Quiz creator is included.</p>
 			</div>
 		</div>
 
@@ -146,7 +146,7 @@
 			<img class="circle small" src="../pics/calc.png" alt="Calc logo">
 			<div class="max">
 				<h6><a href="https://github.com/saloniamatteo/calc">Calc</a></h6>
-			<p>A simple calculator, with a bit-shifting program, Reverse Polish Notation (RPN), and other special values. Doesn&apos;t have a graphical user interface (like Quiz).</p>
+			<p>A simple calculator, with bit-shifting support, Reverse Polish Notation (RPN), and other special values. It does not have a graphical user interface (like Quiz).</p>
 			</div>
 		</div>
 
@@ -154,5 +154,7 @@
 			<a class="button round" href="https://github.com/saloniamatteo/calc">Go <i>arrow_forward</i></a>
 		</nav>
 	</article>
+	</div>
+	</div>
 </body>
 </html>
