Redesign en/{contact,donate}

--- a/it/donate.html
+++ b/it/donate.html
@@ -102,7 +102,7 @@
 		</p>
 
 		<p>
-		In alternativa all'indirizzo, &egrave; possibile usare <a class="button round small no-margin" href="https://openalias.org">OpenAlias <i>arrow_forward</i></a> &mdash; Al momento di invio dei fondi, &egrave; possibile scrivere <b><u>salonia.it</u></b> al posto dell'indirizzo, in modo tale che il vostro client/wallet vada a sostituire automaticamente il testo con l'indirizzo Monero sopra indicato. Inoltre, potete anche usare questo strumento per controllare tutti i record OpenAlias di un dominio: <a class="button round small no-margin" href="https://oa.salonia.it">OpenAlias API Web Form <i>arrow_forward</i></a>
+		In alternativa all'indirizzo, &egrave; possibile usare <a class="button round small no-margin" href="https://openalias.org">OpenAlias <i>arrow_forward</i></a> &mdash; Al momento di invio dei fondi, &egrave; possibile scrivere <b><u>salonia.it</u></b> al posto dell'indirizzo, in modo tale che il vostro client/wallet vada a sostituire automaticamente il testo con l'indirizzo Monero sopra indicato. Inoltre, potete anche usare questo strumento open source per controllare tutti i record OpenAlias di un dominio: <a class="button round small no-margin" href="https://oa.salonia.it">OpenAlias API Web Form <i>arrow_forward</i></a><br>(<a class="link" href="https://github.com/saloniamatteo/openalias">codice sorgente strumento</a>)
 		</p>
 	</article>
 	</div>
