--- a/en/contact.html
+++ b/en/contact.html
@@ -6,7 +6,7 @@
 	<!-- Optimize page loading on some devices -->
 	<meta charset="utf-8">
 	<meta content='width=device-width, initial-scale=1' name='viewport'>
-	<meta name="description" content="Contact Salonia Matteo.">
+	<meta name="description" content="Contact Salonia Matteo">
 
 	<!-- Social media preview -->
 	<meta property="og:title"	content="Salonia Matteo">
@@ -33,49 +33,45 @@
 
 	<!-- CSS overrides -->
 	<link rel="stylesheet" href="../css/style.css">
+
+	<script>
+	document.onreadystatechange = () => remember_prefs();
+	</script>
 </head>
-
-<script>
-ui();
-
-document.onreadystatechange = function() { remember_prefs(); document.body.onresize = function() { remember_prefs() }}
-</script>
 
 <body class="light">
 	<!-- Header -->
-	<header class="fixed padding indigo white-text">
-	<div class="row no-wrap middle-align">
-		<div class="col min no-margin no-padding">
-			<a href="index.html" class="chip circle indigo-text white"><i>arrow_backward</i></a>
+	<header class="fixed small-padding indigo white-text">
+		<div class="grid middle-align">
+			<div class="s2">
+				<a class="button circle white indigo-text" href="index.html">
+					<i>arrow_backward</i>
+				</a>
+			</div>
+
+			<div class="s6 center-align">
+				<a class="button center-align large-text no-margin indigo-text white" href="https://salonia.it">
+					<p class="large-text">Salonia Matteo</p>
+				</a>
+			</div>
+
+			<div class="s4 right-align">
+				<img class="responsive" src="../pics/logo_rec.png" style="max-width: 100px!important" alt="Logo Matteo Salonia">
+			</div>
 		</div>
-		<div class="col center-align">
-			<a class="button center-align large-text no-margin indigo-text white" href="https://salonia.it">Salonia Matteo</a>
-		</div>
-		<div class="col min no-margin no-padding right-align" style="margin-right: 0.5em !important">
-			<img class="responsive" src="../pics/logo_rec.png" style="min-width: 100rem !important">
-		</div>
-	</div>
 	</header>
 
 	<!-- FAB -->
 	<button class="fixed bottom right square round extra large-margin" style="z-index: 10" onclick="toggle_light()">
-		<i>light_mode</i>
+		<i class="fill">light_mode</i>
 	</button>
-	
+
 	<div class="margin">
 	<div>
 		<h5>Contacts</h5>
 
 		<p class="large-text">
-		On this page are listed some ways to contact me in a private way, via email.
-		I ask you to specify why you're contacting me in the email subject.
-		</p>
-
-		<p class="large-text">
-		You're welcome to encrypt the email content with
-		<a href="https://en.wikipedia.org/wiki/GNU_Privacy_Guard"
-		class="button border tiny indigo white-text">GPG&nbsp;<i>arrow_forward</i></a>,
-		using the key relative to the email that you'll choose to contact me.
+		On this page are listed some ways to contact me in a private manner, via email. I ask you specify the reason for contacting me, in the email subject. You&apos;re welcome to encrypt the email content with <a class="button round small no-margin" href="https://en.wikipedia.org/wiki/GNU_Privacy_Guard">GPG&nbsp;<i>arrow_forward</i></a>, using the key relative to the email that you&apos;ll choose to contact me.
 		</p>
 	</div>
 
@@ -83,38 +79,34 @@ document.onreadystatechange = function() { remember_prefs(); document.body.onres
 
 	<!-- Email -->
 	<div>
-	<article class="border no-padding">
-		<h5 class="left-align medium-padding indigo white-text">Email</h5>
-
-		<!-- Personal Server -->
-		<div class="small-margin row no-wrap middle-align">
-			<div class="col small-margin">
-			<h6>Personal Server</h6>
-			matteo@salonia.it
-
-			<div class="right-align">
-			<a href="../matteo.asc" class="button border indigo white-text">GPG key</a>
-			</div>
-			</div>
+	<article class="indigo no-padding">
+		<h5 id="email" class="left-align medium-padding indigo white-text">
+			<a href="#email">
+			Email
 			</a>
-		</div>
+		</h5>
+	</article>
 
-		<div class="divider"></div>
+	<!-- Personal Server -->
+	<article>
+		<h6>Personal Server</h6>
+		<p><i>mail</i> <a href="mailto:matteo@salonia.it"><b>matteo@salonia.it</b></a></p>
 
-		<!-- Protonmail -->
-		<div class="small-margin row no-wrap middle-align">
-			<div class="col small-margin">
-			<h6>Protonmail</h6>
-			saloniamatteo@pm.me
+		<nav>
+			<a class="button round" href="../matteo.asc"><i>vpn_key</i>GPG Key <i>arrow_forward</i></a>
+		</nav>
+	</article>
 
-			<div class="right-align">
-			<a href="../matteo-pm.asc" class="button border indigo white-text">GPG key</a>
-			</div>
-			</div>
-			</a>
-		</div>
+	<!-- Protonmail -->
+	<article>
+		<h6>Protonmail</h6>
+		<p><i>mail</i> <a href="mailto:saloniamatteo@pm.me"><b>saloniamatteo@pm.me</b></a></p>
+
+		<nav>
+			<a class="button round" href="../matteo-pm.asc"><i>vpn_key</i>GPG key <i>arrow_forward</i></a>
+		</nav>
+	</article>
 	</div>
-
-	<div class="medium-space"></div>
+	</div>
 </body>
 </html>
