--- a/en/donate.html
+++ b/en/donate.html
@@ -6,18 +6,18 @@
 	<!-- Optimize page loading on some devices -->
 	<meta charset="utf-8">
 	<meta content='width=device-width, initial-scale=1' name='viewport'>
-	<meta name="description" content="Interested in my projects? Send me a donation!">
+	<meta name="description" content="Interested in my projects? Send me a donation.">
 
 	<!-- Social media preview -->
 	<meta property="og:title"	content="Salonia Matteo">
 	<meta property="og:url"		content="https://salonia.it/en/donate.html">
-	<meta property="og:description"	content="Interested in my projects? Send me a donation!">
+	<meta property="og:description"	content="Interested in my projects? Send me a donation.">
 	<meta property="og:image"	content="https://salonia.it/favicon.png">
 
 	<!-- Twitter-specific -->
 	<meta property="twitter:title"		content="Salonia Matteo">
 	<meta property="twitter:card"		content="summary_large_image">
-	<meta property="twitter:description"	content="Interested in my projects? Send me a donation!">
+	<meta property="twitter:description"	content="Interested in my projects? Send me a donation.">
 	<meta property="twitter:image"		content="https://salonia.it/favicon.png">
 
 	<!--Favicon-->
@@ -33,49 +33,52 @@
 
 	<!-- CSS overrides -->
 	<link rel="stylesheet" href="../css/style.css">
+
+	<script>
+	document.onreadystatechange = () => remember_prefs();
+	</script>
 </head>
-
-<script>
-ui();
-
-document.onreadystatechange = function() { remember_prefs(); document.body.onresize = function() { remember_prefs() }}
-</script>
 
 <body class="light">
 	<!-- Header -->
-	<header class="fixed padding indigo white-text">
-	<div class="row no-wrap middle-align">
-		<div class="col min no-margin no-padding">
-			<a href="index.html" class="chip circle indigo-text white"><i>arrow_backward</i></a>
+	<header class="fixed small-padding indigo white-text">
+		<div class="grid middle-align">
+			<div class="s2">
+				<a class="button circle white indigo-text" href="index.html">
+					<i>arrow_backward</i>
+				</a>
+			</div>
+
+			<div class="s6 center-align">
+				<a class="button center-align large-text no-margin indigo-text white" href="https://salonia.it">
+					<p class="large-text">Salonia Matteo</p>
+				</a>
+			</div>
+
+			<div class="s4 right-align">
+				<img class="responsive" src="../pics/logo_rec.png" style="max-width: 100px!important" alt="Logo Matteo Salonia">
+			</div>
 		</div>
-		<div class="col center-align">
-			<a href="https://salonia.it" class="button center-align large-text no-margin indigo-text white">Salonia Matteo</a>
-		</div>
-		<div class="col min no-margin no-padding right-align" style="margin-right: 0.5em !important">
-			<img class="responsive" src="../pics/logo_rec.png" style="min-width: 100rem !important">
-		</div>
-	</div>
 	</header>
 
 	<!-- FAB -->
 	<button class="fixed bottom right square round extra large-margin" style="z-index: 10" onclick="toggle_light()">
-		<i>light_mode</i>
+		<i class="fill">light_mode</i>
 	</button>
 
 	<div class="margin">
 	<div>
-		<h5>Donazioni</h5>
+		<h5>Donations</h5>
 
 		<p class="large-text">
-		If you want to support me and/or my work, you can help by sending me a donation;
-		on this page are listed some ways to support me.
+		If you want to support me and/or my work, you can help me by sending a donation; on this page are listed some ways to send me a donation.
 		</p>
 
 		<p class="large-text">
 		Go to:<br>
 
-		<a class="button border small-margin indigo white-text" href="#crypto">Crypto</a>
-		<a class="button border small-margin indigo white-text" href="#paypal">Paypal</a>
+		<a class="button round border small-margin indigo white-text" href="#crypto">Crypto</a>
+		<a class="button round border small-margin indigo white-text" href="#paypal">Paypal</a>
 		</p>
 	</div>
 
@@ -83,35 +86,23 @@ document.onreadystatechange = function() { remember_prefs(); document.body.onres
 
 	<!-- Crypto -->
 	<div>
-	<article class="border no-padding">
-		<h5 id="crypto" class="left-align medium-padding indigo white-text">
+	<article class="indigo no-padding">
+		<h5 id="crypto" class="white-text padding">
 		<a href="#crypto">Criptocurrencies</a>
 		</h5>
+	</article>
 
-		<!-- Monero -->
-		<div class="small-margin row no-wrap middle-align">
-			<div class="col small-margin">
-				<h6>Monero</h6>
-				<p style="word-break: break-all">
-				Address:<br>
-				<b>43cgqumPkUAXhL4cx5bn24aZQkg7dUGQtaugoCxNEg1c2kbUY14y5jJMBwju2vqqZDeCJvSsn3SC7cDLuv5ZSeth4CV71cz</b>
-				</p>
-			</div>
-		</div>
+	<!-- Monero -->
+	<article>
+		<h6>Monero</h6>
+		<p style="word-break: break-all">
+		Address:
+		<b>43cgqumPkUAXhL4cx5bn24aZQkg7dUGQtaugoCxNEg1c2kbUY14y5jJMBwju2vqqZDeCJvSsn3SC7cDLuv5ZSeth4CV71cz</b>
+		</p>
 
-		<div class="divider"></div>
-
-		<div class="small-margin row no-wrap middle-align">
-			<div class="col small-margin">
-			<p>
-			Alternatively, you can use
-			<a href="https://openalias.org" class="button border tiny indigo white-text">OpenAlias&nbsp;<i>arrow_forward</i></a>
-			When sending funds, you can write <label class="bold medium-text underline">salonia.it</label>
-			instead of the address, so that your client will automatically replace the text with the
-			Monero address listed above.
-			</p>
-			</div>
-		</div>
+		<p>
+		Alternatively, you can use <a class="button round small no-margin" href="https://openalias.org">OpenAlias <i>arrow_forward</i></a> &mdash; When sending funds, you can write <b><u>salonia.it</u></b> instead of the address, and your client/wallet will automatically replace it with the wallet address written above. Also, you can use this open source tool to get a domain&apos;s OpenAlias records: <a class="button round small no-margin" href="https://oa.salonia.it">OpenAlias API Web Form <i>arrow_forward</i></a><br>(<a class="link" href="https://github.com/saloniamatteo/openalias">tool source code</a>)
+		</p>
 	</article>
 	</div>
 
@@ -119,25 +110,21 @@ document.onreadystatechange = function() { remember_prefs(); document.body.onres
 
 	<!-- PayPal -->
 	<div>
-	<article class="border no-padding">
-		<h5 id="paypal" class="left-align medium-padding indigo white-text">
+	<article class="indigo no-padding">
+		<h5 id="paypal" class="white-text padding">
 		<a href="#paypal">PayPal</a>
 		</h5>
+	</article>
 
-		<!-- PayPal -->
-		<div class="small-margin row no-wrap middle-align">
-			<div class="col small-margin">
-				<p>
-				Link: <a class="button border tiny indigo white-text" href="https://paypal.me/saloniamatteo">
-				https://paypal.me/saloniamatteo&nbsp;<i>arrow_forward</i></a><br>
-				Paypal.me username: <b>saloniamatteo</b>
-				</p>
-			</div>
-		</div>
+	<article>
+		<p>
+		Paypal.me username: <b>saloniamatteo</b> &mdash; link:
+		<a class="button round small no-margin" href="https://paypal.me/saloniamatteo">
+			paypal.me/saloniamatteo <i>arrow_forward</i>
+		</a>
+		</p>
 	</article>
 	</div>
 	</div>
-
-	<div class="medium-space"></div>
 </body>
 </html>
