Update BeerCSS and fix software redirect URL

--- a/software.html
+++ b/software.html
@@ -63,7 +63,7 @@
 					<img class="responsive square medium" src="pics/it.png" alt="Bandiera Italiana">
 				</a>
 
-				<a class="button mtop-small" href="it/index.html">
+				<a class="button mtop-small" href="it/software.html">
 					<p class="large-text">Italiano</p>
 				</a>
 			</div>
@@ -73,7 +73,7 @@
 					<img class="responsive square medium" src="pics/en.png" alt="English Flag">
 				</a>
 
-				<a class="button mtop-small" href="en/index.html">
+				<a class="button mtop-small" href="en/software.html">
 					<p class="large-text">English</p>
 				</a>
 			</div>
@@ -88,7 +88,7 @@
 					<img class="responsive square medium" src="pics/it.png" alt="Bandiera Italiana">
 				</a>
 
-				<a class="button mtop-small" href="it/index.html">
+				<a class="button mtop-small" href="it/software.html">
 					<p class="large-text">Italiano</p>
 				</a>
 			</div>
@@ -98,7 +98,7 @@
 					<img class="responsive square medium" src="pics/en.png" alt="English Flag">
 				</a>
 
-				<a class="button mtop-small" href="en/index.html">
+				<a class="button mtop-small" href="en/software.html">
 					<p class="large-text">English</p>
 				</a>
 			</div>
@@ -113,7 +113,7 @@
 					<img class="responsive square large" src="pics/it.png" alt="Bandiera Italiana">
 				</a>
 				<br>
-				<a class="button mtop-small" href="it/index.html">
+				<a class="button mtop-small" href="it/software.html">
 					<p class="large-text">Italiano</p>
 				</a>
 			</div>
@@ -123,7 +123,7 @@
 					<img class="responsive square large" src="pics/en.png" alt="English Flag">
 				</a>
 				<br>
-				<a class="button mtop-small" href="en/index.html">
+				<a class="button mtop-small" href="en/software.html">
 					<p class="large-text">English</p>
 				</a>
 			</div>
