Add SearXNG entry to home pages

--- a/it/index.html
+++ b/it/index.html
@@ -280,6 +280,24 @@
 		</nav>
 	</article>
 
+	<!-- SearXNG -->
+	<article>
+		<div class="row">
+			<img class="round small" src="../pics/searxng.png" alt="SearXNG logo">
+
+			<div class="max">
+			<h6><a href="https://s.salonia.it">SearXNG</a></h6>
+			<p>Istanza self-hosted del meta-motore di ricerca che protegge la privacy dei propri utenti.</p>
+			</div>
+		</div>
+
+		<nav>
+			<a class="button round" href="https://s.salonia.it">
+				<i>arrow_forward</i> Vai
+			</a>
+		</nav>
+	</article>
+
 	<!-- Github profile -->
 	<article>
 		<div class="row">
