--- a/en/index.html
+++ b/en/index.html
@@ -278,6 +278,25 @@
 		</nav>
 	</article>
 
+	<!-- SearXNG -->
+	<article>
+		<div class="row">
+			<img class="round small" src="../pics/searxng.png" alt="SearXNG logo">
+
+			<div class="max">
+			<h6><a href="https://s.salonia.it">SearXNG</a></h6>
+			<p>Self-hosted instance of the meta-search engine that protects its users' privacy.</p>
+			</div>
+		</div>
+
+		<nav>
+			<a class="button round" href="https://s.salonia.it">
+				<i>arrow_forward</i> Vai
+			</a>
+		</nav>
+	</article>
+
+
 	<!-- Github profile -->
 	<article>
 		<div class="row">
