Add inset shadows (it/index.html)

--- a/it/index.html
+++ b/it/index.html
@@ -54,7 +54,7 @@
 	</div>
 
 	<!-- Linux & Software -->
-	<div class="hero u-text-center" id="linux-soft">
+	<div class="hero u-text-center u-shadow-inset" id="linux-soft">
 		<div class="hero-body m-2-sm">
 			<div class="content w-90p w-80p-md">
 			<h2 class="headline-4"><a class="text-gray-900" href="#linux-soft">Linux e Software</a></h2>
@@ -159,7 +159,7 @@
 	</div>
 
 	<!-- Su di me -->
-	<div class="hero u-text-center bg-teal-100" id="about">
+	<div class="hero u-text-center bg-teal-100 u-shadow-inset" id="about">
 		<div class="hero-body m-2-sm">
 			<div class="content w-90p w-80p-md">
 			<h2 class="headline-4"><a class="text-gray-900" href="#about">Su di me</a></h2>
@@ -226,7 +226,7 @@
 	</div>
 
 	<!-- Tools & Links -->
-	<div class="hero u-text-center" id="tools-links">
+	<div class="hero u-text-center u-shadow-inset" id="tools-links">
 		<div class="hero-body m-2-sm">
 			<div class="content w-90p w-80p-md">
 			<h2 class="headline-4"><a class="text-gray-900" href="#tools-links">Strumenti e Software</a></h1>
@@ -309,7 +309,7 @@
 		</div>
 	</div>
 
-	<footer class="footer bg-blue-500 px-4 pb-4">
+	<footer class="footer bg-blue-500 px-4 pb-4 u-shadow-inset">
 		<h5 class="title text-white">Matteo Salonia</h5>
 
 		<div class="divider"></div>
