Fix hero colors (it/index.html)

--- a/it/index.html
+++ b/it/index.html
@@ -41,7 +41,7 @@
 	</div>
 
 	<!-- Welcome -->
-	<div class="hero mt-2 bg-indigo-200">
+	<div class="hero mt-2 bg-blue-200">
 		<div class="hero-body m-2-sm">
 			<div class="content">
 				<h2 class="title">Benvenuto!</h2>
@@ -158,8 +158,8 @@
 		</div>
 	</div>
 
-	<!-- Su di me -->
-	<div class="hero u-text-center bg-teal-100 u-shadow-inset" id="about">
+	<!-- About me -->
+	<div class="hero u-text-center bg-blue-200 u-shadow-inset" id="about">
 		<div class="hero-body m-2-sm">
 			<div class="content w-90p w-80p-md">
 			<h2 class="headline-4"><a class="text-gray-900" href="#about">Su di me</a></h2>
