--- a/it/index.html
+++ b/it/index.html
@@ -65,7 +65,7 @@
 				</p>
 
 				<div class="content u-text-left w-90p-md">
-				<div class="card mb-8">
+				<div class="card">
 					<div class="m-3">
 						<!-- Arch Linux -->
 						<div class="tile level">
@@ -168,7 +168,7 @@
 				</p>
 
 				<div class="content u-text-left w-90p-md">
-				<div class="card mb-8">
+				<div class="card">
 					<div class="m-3">
 						<!-- About me -->
 						<div class="tile level">
@@ -235,7 +235,7 @@
 				</p>
 
 				<div class="content u-text-left w-90p-md">
-				<div class="card mb-8">
+				<div class="card">
 					<div class="m-3">
 						<!-- SearXNG -->
 						<div class="tile level">
