Shorten description (it/index.html)

--- a/it/index.html
+++ b/it/index.html
@@ -60,8 +60,7 @@
 			<h2 class="headline-4"><a class="text-gray-900" href="#linux-soft">Linux e Software</a></h2>
 				<p class="lead">
 					Scopri la guida che ti aiuta ad installare Arch Linux, le mie configurazioni (i miei dotfiles),
-					il mio Kernel, modificato per ottenere prestazioni elevate ed un'ottima efficienza,
-					i programmi che ho creato, ed i miei pacchetti per Gentoo Linux.
+					il mio Kernel, i programmi che ho creato, ed i miei pacchetti per Gentoo Linux.
 				</p>
 
 				<div class="content u-text-left w-90p-md">
