Add [alt] to imgs (it/index.html)

--- a/it/index.html
+++ b/it/index.html
@@ -69,7 +69,7 @@
 						<!-- Arch Linux -->
 						<div class="tile level">
 							<div class="tile__icon">
-								<figure class="w-6" style="background: white"><img src="../pics/arch.png"></figure>
+								<figure class="w-6" style="background: white"><img src="../pics/arch.png" alt="Arch Linux logo"></figure>
 							</div>
 							<div class="tile__container">
 								<p class="tile__title">
@@ -87,7 +87,7 @@
 						<!-- Dotfiles -->
 						<div class="tile level">
 							<div class="tile__icon">
-								<figure class="w-6" style="background: white"><img src="../pics/gnu.png"></figure>
+								<figure class="w-6" style="background: white"><img src="../pics/gnu.png" alt="GNU logo"></figure>
 							</div>
 							<div class="tile__container">
 								<p class="tile__title">
@@ -105,7 +105,7 @@
 						<!-- Kernel -->
 						<div class="tile level">
 							<div class="tile__icon">
-								<figure class="w-6" style="background: white"><img src="../pics/linux.png"></figure>
+								<figure class="w-6" style="background: white"><img src="../pics/linux.png" alt="Tux"></figure>
 							</div>
 							<div class="tile__container">
 								<p class="tile__title">
@@ -122,7 +122,7 @@
 						<!-- Packages -->
 						<div class="tile level">
 							<div class="tile__icon">
-								<figure class="w-6" style="background: white"><img src="../pics/box.png"></figure>
+								<figure class="w-6" style="background: white"><img src="../pics/box.png" alt="Box"></figure>
 							</div>
 							<div class="tile__container">
 								<p class="tile__title">
@@ -139,7 +139,7 @@
 						<!-- Software -->
 						<div class="tile level">
 							<div class="tile__icon">
-								<figure class="w-6" style="background: white"><img src="../pics/c.png"></figure>
+								<figure class="w-6" style="background: white"><img src="../pics/c.png" alt="C"></figure>
 							</div>
 							<div class="tile__container">
 								<p class="tile__title">
@@ -172,7 +172,7 @@
 						<!-- About me -->
 						<div class="tile level">
 							<div class="tile__icon">
-								<figure class="w-6" style="background: white"><img src="../pics/about.png"></figure>
+								<figure class="w-6" style="background: white"><img src="../pics/about.png" alt="About"></figure>
 							</div>
 							<div class="tile__container">
 								<p class="tile__title">
@@ -189,7 +189,7 @@
 						<!-- Contact me -->
 						<div class="tile level">
 							<div class="tile__icon">
-								<figure class="w-6" style="background: white"><img src="../pics/contact.png"></figure>
+								<figure class="w-6" style="background: white"><img src="../pics/contact.png" alt="Contact"></figure>
 							</div>
 							<div class="tile__container">
 								<p class="tile__title">
@@ -206,7 +206,7 @@
 						<!-- Donate -->
 						<div class="tile level">
 							<div class="tile__icon">
-								<figure class="w-6" style="background: white"><img src="../pics/cash.png"></figure>
+								<figure class="w-6" style="background: white"><img src="../pics/cash.png" alt="Cash"></figure>
 							</div>
 							<div class="tile__container">
 								<p class="tile__title">
@@ -239,7 +239,7 @@
 						<!-- SearXNG -->
 						<div class="tile level">
 							<div class="tile__icon">
-								<figure class="w-6" style="background: white"><img src="../pics/searxng.png"></figure>
+								<figure class="w-6" style="background: white"><img src="../pics/searxng.png" alt="SearXNG logo"></figure>
 							</div>
 							<div class="tile__container">
 								<p class="tile__title">
@@ -256,7 +256,7 @@
 						<!-- OpenAlias -->
 						<div class="tile level">
 							<div class="tile__icon">
-								<figure class="w-6 avatar" style="background: black"><img src="../pics/oa.png"></figure>
+								<figure class="w-6 avatar" style="background: black"><img src="../pics/oa.png" alt="OpenAlias logo"></figure>
 							</div>
 							<div class="tile__container">
 								<p class="tile__title">
@@ -273,7 +273,7 @@
 						<!-- GitHub profile -->
 						<div class="tile level">
 							<div class="tile__icon">
-								<figure class="w-6" style="background: white"><img src="../pics/github.png"></figure>
+								<figure class="w-6" style="background: white"><img src="../pics/github.png" alt="GitHub logo"></figure>
 							</div>
 							<div class="tile__container">
 								<p class="tile__title">
@@ -290,7 +290,7 @@
 						<!-- Source code -->
 						<div class="tile level">
 							<div class="tile__icon">
-								<figure class="w-6" style="background: white"><img src="../pics/github.png"></figure>
+								<figure class="w-6" style="background: white"><img src="../pics/github.png" alt="GitHub logo"></figure>
 							</div>
 							<div class="tile__container">
 								<p class="tile__title">
