Increase footer text contrast (it/index.html)

--- a/it/index.html
+++ b/it/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
 <head>
 	<title>Matteo Salonia</title>
 
@@ -309,14 +309,14 @@
 	</div>
 
 	<footer class="footer bg-blue-500 px-4 pb-4 u-shadow-inset">
-		<h5 class="title text-white">Matteo Salonia</h5>
+		<h5 class="title text-black">Matteo Salonia</h5>
 
 		<div class="divider"></div>
 
-		<a class="font-bold text-white" href="https://salonia.it/it/">IT</a><br>
-		<a class="font-bold text-white" href="https://salonia.it/en/">EN</a>
+		<a class="font-bold text-black" href="https://salonia.it/it/">IT</a><br>
+		<a class="font-bold text-black" href="https://salonia.it/en/">EN</a>
 
-		<p class="text-white mt-4 mb-0">&copy; 2023 Matteo Salonia</p>
+		<p class="text-black mt-4 mb-0">&copy; 2023 Matteo Salonia</p>
 	</footer>
 </body>
 </html>
