--- a/it/index.html
+++ b/it/index.html
@@ -311,12 +311,10 @@
 	<footer class="footer bg-blue-500 px-4 pb-4 u-shadow-inset">
 		<h5 class="title text-black">Matteo Salonia</h5>
 
-		<div class="divider"></div>
+		<a class="font-bold text-black p-2" href="https://salonia.it/it/">IT</a>
+		<a class="font-bold text-black p-2" href="https://salonia.it/en/">EN</a>
 
-		<a class="font-bold text-black" href="https://salonia.it/it/">IT</a><br>
-		<a class="font-bold text-black" href="https://salonia.it/en/">EN</a>
-
-		<p class="text-black mt-4 mb-0">&copy; 2023 Matteo Salonia</p>
+		<p class="text-black mt-4 mb-0">&copy; 2023</p>
 	</footer>
 </body>
 </html>
