--- a/it/packages.html
+++ b/it/packages.html
@@ -1,122 +1,90 @@
 <!DOCTYPE html>
-<html lang="it">
+<html>
 <head>
-	<title>Pacchetti - Salonia Matteo</title>
+	<title>Pacchetti &mdash; Matteo Salonia</title>
 
-	<!-- Optimize page loading on some devices -->
+	<!-- Optimize page loading -->
 	<meta charset="utf-8">
-	<meta content='width=device-width, initial-scale=1' name='viewport'>
-	<meta name="description" content="Pacchetti di Salonia Matteo per Gentoo Linux.">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- Social media preview -->
-	<meta property="og:title"	content="Salonia Matteo">
-	<meta property="og:url"		content="https://salonia.it/it/packages.html">
-	<meta property="og:description"	content="Pacchetti di Salonia Matteo per Gentoo Linux.">
-	<meta property="og:image"	content="https://salonia.it/favicon.png">
+	<!-- SEO -->
+	<meta name="description"				content="I pacchetti di Matteo Salonia per Gentoo Linux.">
+	<meta property="og:description"			content="I pacchetti di Matteo Salonia per Gentoo Linux.">
+	<meta property="twitter:description"	content="I pacchetti di Matteo Salonia per Gentoo Linux.">
+	<meta property="og:title"				content="Pacchetti &mdash; Matteo Salonia">
+	<meta property="twitter:title"			content="Pacchetti &mdash; Matteo Salonia">
+	<meta property="og:url"					content="https://salonia.it/it/index.html">
+	<meta property="og:image"				content="https://salonia.it/favicon.png">
+	<meta property="twitter:image"			content="https://salonia.it/favicon.png">
 
-	<!-- Twitter-specific -->
-	<meta property="twitter:title"		content="Salonia Matteo">
-	<meta property="twitter:card"		content="summary_large_image">
-	<meta property="twitter:description"	content="Pacchetti di Salonia Matteo per Gentoo Linux.">
-	<meta property="twitter:image"		content="https://salonia.it/favicon.png">
-
-	<!--Favicon-->
+	<!-- Favicon -->
 	<link rel="shortcut icon" href="../favicon.png">
 
-	<!-- Beer CSS -->
-	<link rel="stylesheet" href="../css/beer.min.css">
-	<script src="../js/beer.min.js" type="text/javascript"></script>
-	<script src="../js/light.js" type="text/javascript"></script>
-
-	<!-- Montserrat font -->
-	<link rel="stylesheet" href="../css/montserrat.css">
-
-	<!-- CSS overrides -->
-	<link rel="stylesheet" href="../css/style.css">
-
-	<script>
-	document.onreadystatechange = () => remember_prefs();
-	</script>
+	<!-- CSS & Fonts -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cirrus-ui/dist/cirrus.min.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:600">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
 </head>
 
-<body class="light">
+<body>
 	<!-- Header -->
-	<header class="fixed small-padding indigo white-text">
-		<div class="grid middle-align">
-			<div class="s2">
-				<a class="button circle white indigo-text" href="index.html">
-					<i>arrow_backward</i>
-				</a>
-			</div>
-
-			<div class="s6 center-align">
-				<a class="button center-align large-text no-margin indigo-text white" href="https://salonia.it">
-					<p class="large-text">Salonia Matteo</p>
-				</a>
-			</div>
-
-			<div class="s4 right-align">
-				<img class="responsive" src="../pics/logo_rec.png" style="max-width: 100px!important" alt="Logo Matteo Salonia">
+	<div class="header header-fixed unselectable">
+		<div class="header-brand">
+			<div class="nav-item no-hover">
+				<h6 class="title">
+					<a class="text-dark u u-LR" href="index.html">
+						Matteo Salonia
+					</a>
+				</h6>
 			</div>
 		</div>
-	</header>
-
-	<!-- FAB -->
-	<button class="fixed bottom right square round extra large-margin" style="z-index: 10" onclick="toggle_light()">
-		<i class="fill">light_mode</i>
-	</button>
-
-	<div class="margin">
-	<div>
-		<h5>Pacchetti per Gentoo Linux</h5>
-
-		<p class="large-text">
-		Qui potete trovare vari pacchetti creati da Salonia Matteo per Gentoo Linux.
-		</p>
 	</div>
-
-	<div class="space"></div>
 
 	<!-- Packages -->
-	<div>
-	<article class="indigo no-padding">
-		<h5 id="packages" class="white-text padding">
-			<a href="#packages">
-			Pacchetti
-			</a>
-		</h5>
-	</article>
+	<div class="hero u-text-center u-shadow-inset pt-8">
+		<div class="hero-body m-2-sm">
+			<div class="content w-90p w-80p-md">
+			<h2 class="headline-4"><a class="text-gray-900">Pacchetti</a></h2>
+				<p class="lead">
+					Qui puoi trovare tutti i miei pacchetti per Gentoo Linux.
+				</p>
 
-	<article>
-		<p>
-			Se volete altri pacchetti per Gentoo, cliccate il pulsante sotto per aprire la pagina contenente i miei recapiti, per contattarmi e inviarmi la vostra richiesta.
-		</p>
+				<div class="content u-text-left w-90p-md">
+				<div class="card">
+					<div class="m-3">
+						<!-- librsvg -->
+						<div class="tile level">
+							<div class="tile__icon">
+								<figure class="w-6" style="background: white"><img src="../pics/librsvg.png"></figure>
+							</div>
+							<div class="tile__container">
+								<p class="tile__title">
+									<a href="https://salonia.it/Arch" class="font-bold text-link-dark text-md u u-LR">
+										Librsvg
+									</a>
+								</p>
+								<p class="tile__subtitle text-black">Librsvg programmato interamente in C, senza dipendenza su rust</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				</div>
 
-		<nav class="right-align small-margin">
-			<a class="button round" href="contact.html">Recapiti <i>arrow_forward</i></a>
-		</nav>
-	</article>
-
-	<!-- Librsvg -->
-	<article>
-		<div class="row">
-			<a href="https://github.com/saloniamatteo/librsvg-overlay">
-				<img class="square small" src="../pics/librsvg.png" alt="Librsvg logo" style="width: 55rem!important">
-			</a>
-
-			<div class="max">
-				<h6><a href="https://github.com/saloniamatteo/librsvg-overlay">librsvg</a></h6>
-				<p>Librsvg senza dipendenza su rust &mdash; programmato interamente in C</p>
+				<div class="mt-8">
+					<a href="index.html">&larr; Torna alla pagina principale</a>
+				</div>
 			</div>
 		</div>
+	</div>
 
-		<nav>
-			<a class="button round" href="https://github.com/saloniamatteo/librsvg-overlay">
-				<i>arrow_forward</i> Vai
-			</a>
-		</nav>
-	</article>
-	</div>
-	</div>
+	<!-- Footer -->
+	<footer class="footer bg-blue-500 px-4 pb-4 u-shadow-inset">
+		<h5 class="title text-black">Matteo Salonia</h5>
+
+		<a class="font-bold text-black p-2" href="https://salonia.it/it/">IT</a>
+		<a class="font-bold text-black p-2" href="https://salonia.it/en/">EN</a>
+
+		<p class="text-black mt-4 mb-0">&copy; 2023</p>
+	</footer>
 </body>
 </html>
